@@ -16,6 +16,14 @@ use_twitter = 1
 min_version = 1.39
 
 [Prereqs]
-CGI = 3.12
-Class::Load = 0.03
-Test::More = 0.94
+Carp                  = 0
+Class::Load           = 0.03
+Encode                = 0
+HTTP::Body            = 0
+Hash::MultiValue      = 0
+Test::More            = 0.94
+WWW::Form::UrlEncoded = 0
+
+; optional, but recommended runtime deps
+[Prereqs / RuntimeRecommends]
+WWW::Form::UrlEncoded::XS = 0
